draft design for unit testing.

--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "underscore": "*",
     "walk": "*",
     "mongodb": "*",
-    "text-encoding": "*"
+    "text-encoding": "*",
+    "jswiremock": "*"
   }
 }
