introducing swagger to Lepv
http://localhost:8889/swagger

--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,8 @@
     "walk": "*",
     "mongodb": "*",
     "text-encoding": "*",
-    "jswiremock": "*"
+    "jswiremock": "*",
+    "swagger-node-express": "*",
+    "minimist": "*"
   }
 }
