--- a/web/public/docs/api.yaml
+++ b/web/public/docs/api.yaml
@@ -2,9 +2,9 @@
 # as a demonstration of an API spec in YAML
 swagger: '2.0'
 info:
-  title: LEPV Rest API
+  title: LEPV API
   description: LEPV Rest API powered by Node
-  version: "0.0.1"
+  version: "0.1.1"
 # the domain of the service
 host: localhost:8889
 # array of all schemes that your API supports
@@ -45,16 +45,100 @@ paths:
           format: boolean
           default: true
       tags:
-        - cpu
+        - CPU
       responses:
         "200":
-          description: haha
+          description: Status of the CPU, organized by the processor ID like "0", "1", "all", the properties for each processor include %usr, %nice, %sys, %iowait, %irq, %soft, % steal, %guest, %gnice, %idle
           schema:
             type: json
             items:
-              $ref: '#/definitions/Product'
+              $ref: '#/definitions/CPU Status'
         "default":
           description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+  /cpu/stat/{server}:
+    get:
+      summary: Get CPU stat
+      description: |
+        - The cpu/stat endpoint returns information about the cpu of the system being monitored by LEPD.
+        - It talks to LEPD command of "GetCmdMpstat".
+        - It deprecates the old url of http://www.linuxxueyuan.com:8889/cpustat/www.linuxxueyuan.com/
+
+      parameters:
+        - name: server
+          in: path
+          description: the IP or domain of the server to be monitored
+          required: true
+          type: string
+          format: string
+          default: www.linuxxueyuan.com
+        - name: reqid
+          in: query
+          description: the id of the request
+          required: false
+          type: number
+          format: double
+        - name: debug
+          in: query
+          description: flag indicating whether to run the command in debug mode, the raw response from LEPD is included in the returning JSON if true.
+          required: false
+          type: boolean
+          format: boolean
+          default: true
+      tags:
+        - CPU
+      responses:
+        "200":
+          description: Status of the CPU, organized by the processor ID like "0", "1", "all", the properties for each processor include %usr, %nice, %sys, %iowait, %irq, %soft, % steal, %guest, %gnice, %idle
+          schema:
+            type: json
+            items:
+              $ref: '#/definitions/CPU Status'
+        "default":
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+  /cpu/avgload/{server}:
+    get:
+      summary: Get CPU average load
+      description: |
+        - The cpu/avgload endpoint returns the CPU average load of the system being monitored by LEPD.
+        - It talks to LEPD command of "GetProcLoadavg".
+        - It deprecates the old url of http://www.linuxxueyuan.com:8889/??/www.linuxxueyuan.com/
+
+      parameters:
+        - name: server
+          in: path
+          description: the IP or domain of the server to be monitored
+          required: true
+          type: string
+          format: string
+          default: www.linuxxueyuan.com
+        - name: reqid
+          in: query
+          description: the id of the request
+          required: false
+          type: number
+          format: double
+        - name: debug
+          in: query
+          description: flag indicating whether to run the command in debug mode, the raw response from LEPD is included in the returning JSON if true.
+          required: false
+          type: boolean
+          format: boolean
+          default: true
+      tags:
+        - CPU
+      responses:
+        "200":
+          description: average load of the CPU, in %, including the data for last 1, 5, 15 minutes.
+          schema:
+            type: json
+            items:
+              $ref: '#/definitions/Average Load'
+        "default":
+          description: LEPD or LEPV error
           schema:
             $ref: '#/definitions/Error'
 definitions:
