--- a/web/public/docs/api.yaml
+++ b/web/public/docs/api.yaml
@@ -104,7 +104,7 @@ paths:
       summary: Get IO status
       description: |
         - The io/status endpoint returns information about the io of the system being monitored by LEPD.
-        - It talks to LEPD command of "GetCmdMpstat".
+        - It talks to LEPD command of "GetCmdIostat".
         - It deprecates the old url of http://www.linuxxueyuan.com:8889/status/io/www.linuxxueyuan.com/
 
       parameters:
@@ -221,6 +221,48 @@ paths:
             type: json
             items:
               $ref: '#/definitions/Memory Status'
+        "default":
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+  /memory/capacity/{server}:
+    get:
+      summary: Get Memory capability
+      description: |
+        - The cpu/status endpoint returns capability about the memory of the system being monitored by LEPD.
+        - It talks to LEPD command of "GetProcMeminfo".
+        - It deprecates the old url of http://www.linuxxueyuan.com:8889/capacity/memory/www.linuxxueyuan.com/
+
+      parameters:
+        - name: server
+          in: path
+          description: the IP or domain of the server to be monitored
+          required: true
+          type: string
+          format: string
+          default: www.linuxxueyuan.com
+        - name: reqid
+          in: query
+          description: the id of the request
+          required: false
+          type: number
+          format: double
+        - name: debug
+          in: query
+          description: flag indicating whether to run the command in debug mode, the raw response from LEPD is included in the returning JSON if true.
+          required: false
+          type: boolean
+          format: boolean
+          default: true
+      tags:
+        - Memory
+      responses:
+        "200":
+          description: Capability of the Memory, the properties for each processor include %capacity, %summary, %name, %unit
+          schema:
+            type: json
+            items:
+              $ref: '#/definitions/Memory Capability'
         "default":
           description: Unexpected error
           schema:
