--- a/web/public/docs/api.yaml
+++ b/web/public/docs/api.yaml
@@ -267,6 +267,48 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Error'
+  /perf/cpuclock/{server}:
+    get:
+      summary: Get Perf status
+      description: |
+        - The perf/cpuclock endpoint returns Perf status of the system being monitored by LEPD.
+        - It talks to LEPD command of "GetCmdPerfCpuclock".
+        - It deprecates the old url of http://www.linuxxueyuan.com:8889/perfcpu/www.linuxxueyuan.com/
+
+      parameters:
+        - name: server
+          in: path
+          description: the IP or domain of the server to be monitored
+          required: true
+          type: string
+          format: string
+          default: www.linuxxueyuan.com
+        - name: reqid
+          in: query
+          description: the id of the request
+          required: false
+          type: number
+          format: double
+        - name: debug
+          in: query
+          description: flag indicating whether to run the command in debug mode, the raw response from LEPD is included in the returning JSON if true.
+          required: false
+          type: boolean
+          format: boolean
+          default: true
+      tags:
+        - Perf
+      responses:
+        "200":
+          description: Status of the Perf, organized a list Perf status (for each process), the properties for each process include %Overhead, %Symbol, %Shared Object, %Command
+          schema:
+            type: json
+            items:
+              $ref: '#/definitions/Perf Status'
+        "default":
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
 definitions:
   Average Load:
     type: object
