separate directory for each LEP command.

--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
     "text-encoding": "*",
     "jswiremock": "*",
     "swagger-node-express": "*",
-    "minimist": "*"
+    "minimist": "*",
+    "async": "*"
   }
 }
