draft design for unit test data validation.

--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "jswiremock": "*",
     "swagger-node-express": "*",
     "minimist": "*",
-    "async": "*"
+    "async": "*",
+    "deep-diff": "*"
   }
 }
