introducing bower to LEPV.
with bower, we can manage the front end packages in a more manageable manner

and I'd like to take this chance to clean up obsolete packages.

--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,7 @@
     "swagger-node-express": "*",
     "minimist": "*",
     "async": "*",
-    "deep-diff": "*"
+    "deep-diff": "*",
+    "bower": "*"
   }
 }
