get docker work for LEPV, the mongo docker is not ready yet.

--- a/docker/web/Dockerfile
+++ b/docker/web/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:4-alpine
+FROM node
 
 RUN mkdir /website
 WORKDIR /website
@@ -6,9 +6,5 @@ USER root
 ADD . /website/
 
 WORKDIR /website/web
-
-#RUN npm install body-parser express
-
-RUN npm install
 
 ENTRYPOINT ["npm", "start"]
