--- a/web/package.json
+++ b/web/package.json
@@ -6,15 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.15.2",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
-    "express": "~4.14.0",
-    "morgan": "~1.7.0",
-    "pug": "~2.0.0-beta6",
-    "pug-bootstrap": "~0.0.9",
-    "serve-favicon": "~2.3.0",
-    "request": "~2.79.0",
+    "body-parser": "*",
+    "cookie-parser": "*",
+    "debug": "*",
+    "express": "*",
+    "morgan": "*",
+    "pug": "*",
+    "pug-bootstrap": "*",
+    "serve-favicon": "*",
+    "request": "*",
     "underscore": "*",
     "walk": "*",
     "mongodb": "*",
@@ -25,6 +25,6 @@
     "async": "*",
     "deep-diff": "*",
     "bower": "*",
-    "mongoose": "*"
+    "mongodb": "*"
   }
 }
