the very basic of soket.io prototype works. save progress so far, drastic refactoring will follow.

--- a/web/package.json
+++ b/web/package.json
@@ -17,7 +17,6 @@
     "request": "*",
     "underscore": "*",
     "walk": "*",
-    "mongodb": "*",
     "text-encoding": "*",
     "jswiremock": "*",
     "swagger-node-express": "*",
@@ -25,6 +24,7 @@
     "async": "*",
     "deep-diff": "*",
     "bower": "*",
-    "mongodb": "*"
+    "mongodb": "*",
+    "socket.io": "*"
   }
 }
