ready to do more refactoring to routing.

--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
     "deep-diff": "*",
     "bower": "*",
     "mongodb": "*",
-    "socket.io": "*"
+    "socket.io": "*",
+    "promise-timeout": "*"
   }
 }
