introduce Bluebird for Promise...
I should not do this along with the UI refactoring... but, I will live with it and get it work together.

--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
     "deep-diff": "*",
     "bower": "*",
     "mongoose": "*",
+    "bluebird": "*",
     "socket.io": "*",
     "promise-timeout": "*"
   }
