Introduce Moch and Chai, for testing.

--- a/web/package.json
+++ b/web/package.json
@@ -27,6 +27,8 @@
     "mongoose": "*",
     "bluebird": "*",
     "socket.io": "*",
-    "promise-timeout": "*"
+    "promise-timeout": "*",
+    "mocha": "*",
+    "chai": "*"
   }
 }
