--- a/web/package.json
+++ b/web/package.json
@@ -30,6 +30,7 @@
     "socket.io": "*",
     "promise-timeout": "*",
     "mocha": "*",
-    "chai": "*"
+    "chai": "*",
+    "winston": "*"
   }
 }
